--- a/scss/layout/_product-details.scss
+++ b/scss/layout/_product-details.scss
@@ -17,6 +17,13 @@
         background-color: $white;
         border: 1px solid #e0e0e0;
         margin-bottom: 5px;
+
+    }
+    .big-prod-image{
+        width: 100%
+    }
+    .brand-img{
+        margin-bottom: 30px;
     }
 
     .thumbnail{
@@ -68,6 +75,21 @@
         margin-bottom: 3;
     }
 
+    .prices{
+        display: inline-block;
+        width: 100%;
+        max-width: 380px;
+    }
+
+    .discount{
+        display: inline-block;
+        text-align: center;
+        padding: 0px 8px;
+        p{
+            margin: 8px 0 0 0;
+        }
+    }
+
     .price{
         @include font-size(72px);
         line-height: 72px;
@@ -106,10 +128,6 @@
         display: flex;
         width: 100%;
         justify-content: flex-end;
-
-        form{
-            
-        }
     
         label{
         font-style: italic;
@@ -127,12 +145,26 @@
             width: 50px;
         }
 
+        select{
+            width: 140px;
+        }
+
         .sizepick, .qtypick{
             display: inline-block;
             
         }
 
+        .sizepick{
+            font-style: italic;
+        }
+
         
+    }
+
+    .not-on-stock{
+        text-align: right;
+        font-style: italic;
+        color: $red;
     }
 
     .sharetext{
