--- a/css/styles.css
+++ b/css/styles.css
@@ -3071,7 +3071,7 @@ button {
   font-size: 1.125rem;
   color: #ffffff;
   padding: 4.5px 20px;
-  text-transform: uppercase !important;
+  text-transform: uppercase;
   border-radius: 50px 50px 50px 50px;
   border: 1px solid #ec181f;
   background: #f23434;
@@ -3150,6 +3150,7 @@ button.register {
   padding: 5px 30px 5px 30px;
   border: solid #a72500 1px;
   text-decoration: none;
+  transition: 0.5s;
   background: #f85032;
   background: -moz-linear-gradient(45deg, #f85032 0%, #f6290c 24%, #f16f5c 24%, #e73827 100%);
   background: -webkit-gradient(left bottom, right top, color-stop(0%, #f85032), color-stop(24%, #f6290c), color-stop(24%, #f16f5c), color-stop(100%, #e73827));
@@ -3159,6 +3160,33 @@ button.register {
   background: linear-gradient(45deg, #f85032 0%, #f6290c 24%, #f16f5c 24%, #e73827 100%);
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f85032', endColorstr='#e73827', GradientType=1 );
   align-self: flex-end; }
+  button.register:hover {
+    color: #000000; }
+
+button.addcart {
+  border-radius: 5px;
+  font-family: Arial;
+  color: #ffffff;
+  font-size: 22px;
+  font-size: 1.375rem;
+  padding: 5px 30px 5px 30px;
+  border: solid #a72500 1px;
+  text-decoration: none;
+  text-transform: none;
+  margin-left: auto;
+  margin-bottom: 38px;
+  display: block;
+  transition: 0.5s;
+  background: #f85032;
+  background: -moz-linear-gradient(45deg, #f85032 0%, #f6290c 24%, #f16f5c 24%, #e73827 100%);
+  background: -webkit-gradient(left bottom, right top, color-stop(0%, #f85032), color-stop(24%, #f6290c), color-stop(24%, #f16f5c), color-stop(100%, #e73827));
+  background: -webkit-linear-gradient(45deg, #f85032 0%, #f6290c 24%, #f16f5c 24%, #e73827 100%);
+  background: -o-linear-gradient(45deg, #f85032 0%, #f6290c 24%, #f16f5c 24%, #e73827 100%);
+  background: -ms-linear-gradient(45deg, #f85032 0%, #f6290c 24%, #f16f5c 24%, #e73827 100%);
+  background: linear-gradient(45deg, #f85032 0%, #f6290c 24%, #f16f5c 24%, #e73827 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f85032', endColorstr='#e73827', GradientType=1 ); }
+  button.addcart:hover {
+    color: #000000; }
 
 html {
   font-size: 16px; }
@@ -3673,6 +3701,10 @@ footer {
     background-color: #ffffff;
     border: 1px solid #e0e0e0;
     margin-bottom: 5px; }
+  #prod-details .big-prod-image {
+    width: 100%; }
+  #prod-details .brand-img {
+    margin-bottom: 30px; }
   #prod-details .thumbnail {
     background-color: #ffffff;
     border: 1px solid #e0e0e0; }
@@ -3707,6 +3739,16 @@ footer {
       margin: 0px; }
   #prod-details .mb-3 {
     margin-bottom: 3; }
+  #prod-details .prices {
+    display: inline-block;
+    width: 100%;
+    max-width: 380px; }
+  #prod-details .discount {
+    display: inline-block;
+    text-align: center;
+    padding: 0px 8px; }
+    #prod-details .discount p {
+      margin: 8px 0 0 0; }
   #prod-details .price {
     font-size: 72px;
     font-size: 4.5rem;
@@ -3748,8 +3790,16 @@ footer {
       padding: 6px 10px; }
     #prod-details .selects input {
       width: 50px; }
+    #prod-details .selects select {
+      width: 140px; }
     #prod-details .selects .sizepick, #prod-details .selects .qtypick {
       display: inline-block; }
+    #prod-details .selects .sizepick {
+      font-style: italic; }
+  #prod-details .not-on-stock {
+    text-align: right;
+    font-style: italic;
+    color: #f2262c; }
   #prod-details .sharetext {
     text-align: right;
     font-size: 12px;
@@ -3828,6 +3878,24 @@ footer {
     background-color: #ee2d23; }
     #prod-tabs .ui-tabs-active a {
       text-shadow: 0px 1px 0px rgba(78, 78, 77, 0.47); }
+
+.contactform label {
+  display: block;
+  font-weight: 700; }
+
+.contactform input, .contactform textarea {
+  border-radius: 3px;
+  border: 1px solid #e6e6eb; }
+
+.contactform .ng-invalid.ng-touched {
+  border: 1px solid #f2262c; }
+
+.contactform input {
+  margin-bottom: 10px;
+  width: 100%; }
+
+.contactform textarea {
+  width: 100%; }
 
 * {
   outline: none; }
