--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -23,6 +23,7 @@
 @import "layout/filter";
 @import "layout/product-details";
 @import "layout/product-tabs";
+@import "layout/contact";
 
 *{
   outline: none;
